--- a/index.html
+++ b/index.html
@@ -6,14 +6,30 @@
     <title>Personal Portfolio Landing Page Project</title>
 
     <!-- link to a Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="CSS/Style.css" rel="stylesheet">
+   <link href="Bootstrap/css/bootstrap-grid.css" rel="stylesheet" />
+   <link href="Bootstrap/css/bootstrap-grid.min.css" rel="stylesheet" />
+   <link href="Bootstrap/css/bootstrap.css" rel="stylesheet">
+   <link href="Bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="CSS/Style.css" rel="stylesheet" />
+
 
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Home</a>
+
+<div class="container-fluid">
+
+    <!-- CSS GRID -->
+
+    <div class="AllContains">
+    <div id="Navbar">
+
+        <!-- Paste the Navbar Here -->
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+    <img src="CSS/landimg1.jpg" alt="logo" class="LogoImage">
+    <a class="navbar-brand"  id="Home12" href="#">Home</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -27,13 +43,13 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
+            Display
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">About Me</a></li>
-            <li><a class="dropdown-item" href="#">Contact Me</a></li>
+            <li><a class="dropdown-item" href="#skillsDiv">About Me</a></li>
+            <li><a class="dropdown-item" href="public/Contact.html">Contact Me</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Get Back Home</a></li>
+            <li><a class="dropdown-item" href="#Home12">Get Back Home</a></li>
           </ul>
         </li>
       </ul>
@@ -44,6 +60,111 @@
     </div>
   </div>
 </nav>
+</div>
+
+          <div  id="SomeC1">
+          <img src="CSS/landimg1.jpg" alt="logo" class="img-container">
+          </div>
+          <div id="VideoDiv">
+
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/nQ2f79bi_QE?si=e5aMQty36oa6BTOQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+         </div>
+         <div id="SomeC2">
+             <p style="width: 30px;
+              color: #0a3622;">Portfolio Landing Project</p>
+             <a style="width: 50%;">WELCOME</a>
+         </div>
+
+
+
+         <div id="SomeC3">
+
+             <p><strong>Requirements</strong></p>
+             <p><a href="https://dataheadhunters.com/academy/how-to-build-a-project-management-tool-in-python-for-businesses/">Project Management Skills</a></p>
+             <p><a href="https://www.pwc.com/us/en/tech-effect/emerging-tech/virtual-reality-study.html">Virtual Reality</a></p>
+
+         </div>
+         <div id="SomeC4">
+
+           <!-- Include the tagline here of the content -->
+             <p>
+                  <strong>Transforming concepts into impactful digital products</strong>
+
+             </p>
+
+         </div>
+         <div id="portfolioDiv">
+            <p>Landing Page Project</p>
+            <img src="CSS/python%20codes.jpg">
+
+
+         </div>
+
+
+    <div id="skillsDiv">
+      <a><strong>SKILLS AND HOBBIES</strong></a>
+        <!-- Contains info about me with my skills -->
+
+        <div class="container">
+            <div class="row">
+
+                <div class="col-md-6" id="Skills">
+                    <a><strong>SKILLS</strong></a>
+            <p>1. Web development skills</p>
+            <p>3. UI/UX Design Skills</p>
+            <p>4. Project Management Skills</p>
+
+        </div>
+        <div  class="col-md-6" id="Hobbies">
+            <a><strong>HOBBIES</strong></a>
+            <p>1. Virtual Reality (VR) Exploration</p>
+            <p>2. Game Modding and Level Design</p>
+            <p>3. Cryptocurrency Trading or Mining</p>
+            <p>4. Gaming</p>
+
+        </div>
+            </div>
+
+        </div>
+
+    </div>
+    <div id="SocialDiv">
+        <div class="container">
+            <div class="row">
+
+               <!--                    12 columns which are spannable -->
+<!--                    3 columns : about , socila , contactus-->
+                    <div class="col-md-4">
+<!--                        about section -->
+                        <h5>About Us</h5>
+                        <p>Where are located in westlands</p>
+                    </div>
+                    <div class="col-md-4">
+<!--                         contact us -->
+                        <h5>Contact us</h5>
+                        <p>Email: elijahkyai100@gmail.com</p>
+                        <p>Phone+ : +254791193799</p>
+                        <p>Address : Westlands, Nairobi Kenya</p>
+                    </div>
+                    <div class="col-md-4">
+<!--social media links -->
+                        <h5>Follow us on:</h5>
+                        <p><a href="https://x.com/ElijahKyai53595">Portfolio Project on Twiiter</a></p>
+                        <p><a href="https://www.facebook.com/profile.php?id=100078963987177">Portfolio  Facebook</a></p>
+
+            </div>
+        </div>
+
+    </div>
+
+
+
+ </div>
+</div>
+
+
+
+
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
