--- a/public/Contact.html
+++ b/public/Contact.html
@@ -6,49 +6,77 @@
     <title>Contacts</title>
 
     <!-- link to Bootstrap -->
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="Bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="Bootstrap/css/bootstrap-grid.css" rel="stylesheet">
+    <link href="Bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="CSS/Style.css" rel="stylesheet" />
+
+
 
 </head>
 <body>
-<div class="ContactsContainer1">
-<div class="col-md-3">
-    <div></div>
-</div>
-    <div class="col-md-3">
+<!-- CSS GRID   -->
+<!-- Navigation bar -->
 
-        <div>
-           <a class="IDcontact1">ENTER YOUR CONTACT DETAILS</a>
-        <div class="mb-3">
-          <label for="formGroupExampleInput" class="form-label">Name</label>
-          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example Rocha">
-        </div>
-        <div class="mb-3">
-          <label for="form4GroupExampleInput2" class="form-label">Email</label>
-          <input type="text" class="form-control" id="form2GroupExampleInput2" placeholder="Example name@gmail.com">
-        </div>
+<div class="container-fluid">
+    <div class="ContactDetails">
+            <div id="Contact1">
+                <nav class="navbar bg-body-tertiary">
+                  <div class="container-fluid">
+                    <a class="navbar-brand" >Home</a>
+                    <form class="d-flex" role="search">
+                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                      <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                  </div>
+                </nav>
+            </div>
+            <div id="contact2">
 
-        <div class="mb-3">
-          <label for="formGroupExampleInput" class="form-label">Phone Number</label>
-          <input type="text" class="form-control" id="form3GroupExampleInput" placeholder=e.g+254712345678>
-        </div>
-        <div class="mb-3">
-          <label for="form4GroupExampleInput2" class="form-label">Message</label>
-          <input type="text" class="form-control" id="form4GroupExampleInput2" placeholder="text sms">
-        </div>
+                <div class="container">
+                    <div id="Details" class="row">
+                        <div class="col-md-4"></div>
+                        <div class="col-md-4">
 
-        <button type="submit" class="IDcontact1" style="background: black;
-        text-align: center;
-        margin-outside: 0px;
-        align-content: center;
-        color: white">Submit</button>
+                            <p style="color: blue" >APPLICATION FORM</p>
+                            <form>
+                                <div class="mb-3">
+                                    <label for="exampleInputName" class="form-label">Name</label>
+                                    <input type="text" class="form-control" id="exampleInputName">
+                                  </div>
+                                  <div class="mb-3">
+                                    <label for="exampleInputEmail1"  class="form-label">Email address</label>
+                                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                                  </div>
+                                <div class="mb-3">
+                                    <label for="exampleInputPhoneNumber1" class="form-label">Phone Number</label>
+                                    <input type="number" class="form-control" id="exampleInputPhoneNumber1">
+                                  </div>
+                                  <div class="mb-3">
+                                    <label for="exampleInputMessage1" class="form-label">Message</label>
+                                    <input type="text" class="form-control" id="exampleInputMessage1">
+                                  </div>
+                                  <div class="mb-3 form-check">
+                                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                                  </div>
+                                  <button type="submit" href="#Home12" class="btn btn-primary">Submit</button>
+                                </form>
+                        </div>
+                        <div class="col-md-4"></div>
+
+                    </div>
+                </div>
+            </div>
+            <div id="contact3"></div>
+            <div id="contact4"></div>
+
     </div>
-        </div>
-
-<div class="col-md-3">
-    <div></div>
-</div>
 
 </div>
+
 
 
 
