Added Header and Codes

--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
          <div id="SomeC2">
              <p style="width: 30px;
               color: #0a3622;">Portfolio Landing Project</p>
-             <a style="width: 50%;">WELCOME</a>
+             <a style="width: 50%;"><h6>WELCOME</h6></a>
          </div>
 
 
 
          <div id="SomeC3">
 
-             <p><strong>Requirements</strong></p>
+             <p><h5>Requirements</h5></p>
              <p><a href="https://dataheadhunters.com/academy/how-to-build-a-project-management-tool-in-python-for-businesses/">Project Management Skills</a></p>
              <p><a href="https://www.pwc.com/us/en/tech-effect/emerging-tech/virtual-reality-study.html">Virtual Reality</a></p>
 
