added commits codes

--- a/index.html
+++ b/index.html
@@ -136,15 +136,15 @@
 <!--                    3 columns : about , socila , contactus-->
                     <div class="col-md-4">
 <!--                        about section -->
-                        <h5>About Us</h5>
-                        <p>Where are located in westlands</p>
+                        <h5>About Me</h5>
+                        <p>Located in Ruiru Town</p>
                     </div>
                     <div class="col-md-4">
 <!--                         contact us -->
-                        <h5>Contact us</h5>
+                        <h5>Contact Me</h5>
                         <p>Email: elijahkyai100@gmail.com</p>
                         <p>Phone+ : +254791193799</p>
-                        <p>Address : Westlands, Nairobi Kenya</p>
+                        <p>Address : Ruiru, Nairobi Kenya</p>
                     </div>
                     <div class="col-md-4">
 <!--social media links -->
