added html codes

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     </div>
                     <div class="col-md-4">
 <!--social media links -->
-                        <h5>Follow us on:</h5>
+                        <h5>Follow me on:</h5>
                         <p><a href="https://x.com/ElijahKyai53595">Portfolio Project on Twiiter</a></p>
                         <p><a href="https://www.facebook.com/profile.php?id=100078963987177">Portfolio  Facebook</a></p>
 
